# mmTask2Notion

./: generate_jwt.py  main.py  plan.md  push2notion.py  pyproject.toml  test_request.py
